Modify letter text and video in index.html
Updated the letter content and video source in index.html.

--- a/index.html
+++ b/index.html
@@ -14,14 +14,10 @@
       <div class="envelope">
         <div class="letter">
           <div class="text">
-            <strong> My dear daughter </strong>
-            <p>
-              You have been away from me long enough, and you still choose distance as if it were easier than closeness.
-              This is how you thank your father.... All I have to say is that if the world does not contain you as much
-              as they are, then my heart welcomes you and I will continue to wait for you. Do not procrastinate in being
-              far from your father, for he is dying of longing for you, little one.
+            <strong> My Dear</strong>
+            <p> I’ll be completely honest with you… You mean more to me than I ever managed to say. Having you in my life changes everything. And if there’s anything we need to make right between us, I’m ready to give it my heart."
             </p>
-            <strong>Your dear , father</strong>
+            <strong></strong>
           </div>
         </div>
       </div>
@@ -31,7 +27,7 @@
 
   <div class="mu" style="display: none;">
     <video id="myVideo" loop width="200px" height="200px">
-      <source src="صوت رنة المفتاح في الباب ساعة لما توصل 🗝🥰🤗_بنت ابويا ويا بختي عمري معاك عشتوا 😌😍_بيقولولي اني شبهك 🌍😍(.mp4"
+      <source src="اسمي.mp4"
         type="video/mp4">
     </video>
   </div>
@@ -54,3 +50,4 @@
 </body>
 
 </html>
+
